profiling-using-exp-runner/backup_FINAL_RESULTS/pca_experiment/run_7_repetition_0/energibridge.log
sampling interval: 200, target function: pca_cache, input size: 2000
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.pca as module; X = np.random.rand(2000,2000); X_tuple = tuple(map(tuple, X)); module.pca_cache(X_tuple, 10); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.718157253265381 for 0.2351578 sec of execution.
